@@ -62,7 +62,8 @@ EXTRA_DIST += $(TESTS)
 EXTRA_DIST += tests/foo.idx tests/foo.ind \
 	tests/uni.idx tests/uni.dict tests/uni.ist \
 	tests/uni1.ist tests/uni2.ist tests/uni.ind \
-	tests/tort.idx tests/tortW.idx tests/ok-tort.ind
+	tests/tort.idx tests/tortW.idx tests/head1.ist \
+	tests/ok-tort.ind tests/ok-tort2.ind
 DISTCLEANFILES = foo.* uni.* tort*.*
 ## tests/pprec.test
 EXTRA_DIST += tests/range.idx \
